# furikanji

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/furikanji/: core_logic.py  main.py  manga_page_ocr.py  page_text_extractor.py  process_image.py
src/furikanji/adapters/: __init__.py  comic_text_detector_localizer.py  fugashi_furigana_reading_generator.py  manga_ocr_text_transcriber.py  model_cache_adapter.py  sudachi_furigana_reading_generator.py  sudachi_reading_overrides.json
src/furikanji/application/: __init__.py  furigana_renderer.py  interfaces.py  page_text_extractor.py  process_image_use_case.py
tests/: test_furigana_renderer_erase.py  test_furigana_renderer_placement.py  test_furigana_renderer_sizing.py  test_furigana_renderer_vertical_ruby_fit.py  test_main_reading_backend.py  test_manga_page_ocr.py  test_page_text_extractor.py  test_sudachi_furigana_reading_generator.py
